# Public

./: .gitignore  README.md  pyproject.toml
Applications/eks-aws-kube-deployment/: README.md  note.txt
Applications/where-to-go-django-aws/: .gitignore  README.md
Applications/where-to-go-django-aws/src/backend/: Dockerfile  db.sqlite3  pyproject.toml
Applications/where-to-go-django-aws/src/backend/Map/: db.sqlite3  settings.py
Applications/where-to-go-django-aws/src/backend/Map/Map/: settings.py
Applications/where-to-go-django-aws/src/backend/backend/: admin.py  models.py  urls.py  views.py
Applications/where-to-go-django-aws/src/backend/backend/features/: base_utils.py
Applications/where-to-go-django-aws/src/backend/backend/migrations/: 0001_initial.py  0002_amenity_group_name.py  0003_remove_amenity_description_en.py  0004_auto_20230831_2051.py  0005_auto_20230831_2055.py  0006_amenity_color.py
Applications/where-to-go-django-aws/src/backend/backend/templates/: base.html  map_view.html
Applications/where-to-go-django-aws/src/backend/static/js/: map.js
Applications/where-to-go-django-aws/src/backend/static/styles/: style.css
Kubernetes/kube-grafana/: grafana-configmaps.yaml  grafana-deployment.yaml  grafana-namespace.yaml  grafana-pvc.yaml  grafana-service.yaml
control_mouse_keyboard/: actions.json  macro.py
encrypt_argparse/: Marko.txt  argparse_script.py  encrypt.py  main.py  password_validator.py  test_password.py
library_system/: connection.py  context_mnager.py  main.py  test_sqlite.py
where_to_go/: Mapa.html  OSM_take_data_CLASS.py
(+62 files in other folders)
