[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dawid Jankowski <dawidjankowski.alk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "3.2.0"
pytest = "^7.4.0"
requests = "^2.31.0"
django-leaflet = "^0.29.0"
geopy = "^2.4.0"
networkx = "^3.1"
folium = "^0.14.0"
osmnx = "^1.6.0"
scikit-learn = "^1.3.0"
shapely = "^2.0.1"
geopandas = "^0.13.2"
descartes = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
